# SingleCellSim

./: Makefile.am  configure.ac
dev/: counts.csv  example.org
scripts/: placeholder.R  rrarefy_analysis.org
src/: Makefile.am  gigp.c  gigp.h  matrix_io.c  outdir.c  outdir.h  scs.h  singleCellSim.c  user_interface.c  user_interface.h
